--- a/views/completadas.erb
+++ b/views/completadas.erb
@@ -1,10 +1,10 @@
 <%array=Tarea.all%>
 <%done= array.map {|hash| hash["done"]} %>
 <%if array.none? %>
-  <%="Ingresa alguna tarea"%>
+  <%="Ingresa una tarea"%>
 <%end%>
 <%if done.all? {|x| x==false} && array.any?%>
-  <%="No tienes tareas finalizadas"%>
+  <%="Aún no finalizas ninguna tarea"%>
 <%else%>
   <%array.each do |hash|%>
     <%if hash["done"]==true%>
