--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
-<a><h2>Agregar tarea</h2></a>
+
+
+<h2>Agregar tarea</h2>
 <p style="font-size:80%;">(Separa las palabras con guión bajo, sin tildes ni ñ)</p>
   <form action="/nueva/tarea" method="post">
     <input type="text" name="titulo">
