se cambia nombre del boton a finalizar

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
               <td>
                 <form action="/tarea/<%=hash["id"]%>/actualizar" method="post">
                   <input type="hidden" name="_method" value="patch">
-                  <input type="submit"value ="actualizar">
+                  <input type="submit"value ="finalizar">
                 </form>
               </td>
               <td>
