--- a/views/index.erb
+++ b/views/index.erb
@@ -1,46 +1,70 @@
 
+<div id="add" class="container">
+<form action="/" method="post" class="form-horizontal">
+  
+  <div class="form-group">
+  <div class="col-md-6 col-offset-3">
+    <label class="" for="new">Nueva tarea:</label>
+    <input class="form-control" name="content" type="text" placeholder="Nueva tarea:">
+  </div>
+  </div>
+  
+  <div class="form-group">
+    <input class="btn btn-primary"type="submit" value="Agrega una tarea">
+  </div>
 
-<h2>Agregar tarea</h2>
-<p style="font-size:80%;">(Separa las palabras con guión bajo, sin tildes ni ñ)</p>
-  <form action="/nueva/tarea" method="post">
-    <input type="text" name="titulo">
-    <input type="submit" value="agregar">
-  </form>
+</form>
+</div>
+<!-- <h1><%= @items %></h1> -->
+<div class="row">
 
+<div class="col-md-6">
+    <h2 class="text-center">Tareas Pendientes</h2>
+     <% @items.each do |item| %>
+        <% if item['done']==false %>
+          <ul id="lista-tareas" class="unstyled">
+            <li id="<%= item['id'] %>">
+              <span class="item"> <%= item['title'] %></span>
+              <span class="pull-right" >
+                <form action="/" method="post" style ='float: left; padding: 2px;' >
+                  <input type="hidden" name="_method" value="patch"/>
+                  <input  class="btn btn-primary" type="submit" value="Completar">
+                  <input type="hidden" name="done" value=<%= item['id']%>>
+                </form>  
+                <form action="/" method="post" style ='float: left; padding: 2px;' >
+                  <input type="hidden" name="_method" value="delete"/>
+                  <input  class="btn btn-danger" type="submit" value="Eliminar">
+                  <input type="hidden" name="id" value=<%= item['id']%>>
+                </form>  
+              </span>
+            </li>
+          </ul>
+        <% end %>  
+    <% end %>
+  </div>
 
-<a href="/completadas"><h2>Tareas finalizadas</h2></a>
+  <div class="col-md-6">
+    <h2 class="text-center">Tareas Completas</h2>
+     <% @items.each do |item| %>
+        <% if item['done']==true %>
+          <ul id="lista-tareas" class="">
+            <li id="<%= item['id'] %>">
+              <span class="item"> <%= item['title'] %></span>
+                <div class="pull-right ">
+                  <div class="center-block">
+                    <form action="/" method="post"style ='float: left; padding: 2px;' class="center-block">
+                      <input type="hidden" name="_method" value="delete"/>
+                      <input  class="btn btn-danger" type="submit" value="Quitar de la lista">
+                      <input type="hidden" name="id" value=<%= item['id']%>>
+                    </form> 
+                  </div>
+                </div>  
+              
+            </li>
+          </ul>
+        <% end %>  
+    <% end %>
+  </div>
 
-<h2>Pendientes</h2>
-
-  <%array=Tarea.all%>
-  <%done= array.map {|hash| hash["done"]} %>
-    <%if array.none? %>
-      <%="Ingresa alguna tarea"%>
-    <%end%>
-    <%if done.all? {|x| x==true} && array.any?%>
-      <%="No tienes tareas pendientes"%>
-    <%else%>
-      <%array.each do |hash|%>
-        <%if hash["done"]==false%>
-          <table>
-            <tr>
-              <td width="350px">
-                <%=hash["title"]%>
-              </td>
-              <td>
-                <form action="/tarea/<%=hash["id"]%>/actualizar" method="post">
-                  <input type="hidden" name="_method" value="patch">
-                  <input type="submit"value ="finalizar">
-                </form>
-              </td>
-              <td>
-                <form action="/tarea/<%=hash["id"]%>/eliminar" method="post">
-                  <input type="hidden" name="_method" value="delete">
-                  <input type="submit"value ="eliminar">
-                </form>
-              </td>
-            </tr>
-          </table>
-        <%end%>
-      <%end%>
-    <%end%>
+  
+</div>   
