--- a/views/index.erb
+++ b/views/index.erb
@@ -3,14 +3,16 @@
 <form action="/" method="post" class="form-horizontal">
   
   <div class="form-group">
-  <div class="col-md-6 col-offset-3">
+  <div class="col-md-6 col-md-offset-3">
     <label class="" for="new">Nueva tarea:</label>
     <input class="form-control" name="content" type="text" placeholder="Nueva tarea:">
   </div>
   </div>
   
   <div class="form-group">
+  <div class="col-md-2 col-md-offset-5">
     <input class="btn btn-primary"type="submit" value="Agrega una tarea">
+  </div>
   </div>
 
 </form>
