--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
 <!-- <h1><%= @items %></h1> -->
 <div class="row">
 
-<div class="col-md-6">
+<div class="col-md-4 col-md-offset-2">
     <h2 class="text-center">Tareas Pendientes</h2>
      <% @items.each do |item| %>
         <% if item['done']==false %>
@@ -45,7 +45,7 @@
     <% end %>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-4">
     <h2 class="text-center">Tareas Completas</h2>
      <% @items.each do |item| %>
         <% if item['done']==true %>
