--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,14 @@
+<style> 
+	ul li.pendientes {
+    font-size: 20px;
+    color: red;
+  }
 
+  ul li.finalizadas {
+    font-size: 20px;
+    color: green;
+  }
+	</style>
 <div id="add" class="container">
 <form action="/" method="post" class="form-horizontal">
   
@@ -25,12 +35,12 @@
      <% @items.each do |item| %>
         <% if item['done']==false %>
           <ul id="lista-tareas" class="unstyled">
-            <li id="<%= item['id'] %>">
+            <li id="<%= item['id'] %>" class="pendientes">
               <span class="item"> <%= item['title'] %></span>
               <span class="pull-right" >
                 <form action="/" method="post" style ='float: left; padding: 2px;' >
                   <input type="hidden" name="_method" value="patch"/>
-                  <input  class="btn btn-primary" type="submit" value="Completar">
+                  <input  class="btn btn-success" type="submit" value="Completar">
                   <input type="hidden" name="done" value=<%= item['id']%>>
                 </form>  
                 <form action="/" method="post" style ='float: left; padding: 2px;' >
@@ -49,14 +59,14 @@
     <h2 class="text-center">Tareas Completas</h2>
      <% @items.each do |item| %>
         <% if item['done']==true %>
-          <ul id="lista-tareas" class="">
-            <li id="<%= item['id'] %>">
+          <ul id="lista-tareas1" class="">
+            <li id="<%= item['id'] %>" class="finalizadas">
               <span class="item"> <%= item['title'] %></span>
                 <div class="pull-right ">
                   <div class="center-block">
                     <form action="/" method="post"style ='float: left; padding: 2px;' class="center-block">
                       <input type="hidden" name="_method" value="delete"/>
-                      <input  class="btn btn-danger" type="submit" value="Quitar de la lista">
+                      <input  class="btn btn-primary" type="submit" value="Quitar de la lista">
                       <input type="hidden" name="id" value=<%= item['id']%>>
                     </form> 
                   </div>
